<resources>
    <string name="app_name">Hospital Bees</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget Your Password?</string>
    <string name="home">Home</string>
    <string name="logout">Log Out</string>
    <string name="homepage_wordings">I want to ...</string>
    <string name="book_appointment">Book An Appointment</string>
    <string name="view_booking_history">View Booking History</string>
    <string name="view_my_queue">View My Queue</string>
    <string name="view_faq">FAQs</string>
    <string name="view_alerts">Alerts</string>
    <string name="notice_text">Hello User, this is a warning text to let you know that our services currently only include areas in the west. Thank you for your understanding and we are sorry for the inconvenience!</string>
    <string name="queue_length">Queue Length</string>
    <string name="travel_time">Travel Time</string>
    <string name="total_time">Total Time</string>
    <string name="next">Next</string>
    <string name="minutes">Min</string>
    <string name="booking_completed">Booking Completed</string>
    <string name="completion_notice">Please go to My Queue and present the QR code to the clinic to check in. Your Q Number will be allocated for you.</string>
    <string name="back_text">Back</string>
    <string name="go_to_my_queue">Go To MyQueue</string>
    <string name="booking_details_text">Your Booking Details</string>
    <string name="booking_details_wordings">One Last Step...</string>
    <string name="name_text">Name</string>
    <string name="clinic">Clinic</string>
    <string name="booking_time">Time of Booking</string>
    <string name="estimated_waiting_time">Est. Waiting Time</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="booking_history_text">Booking History</string>
    <string name="alert_content">The temperature outside is cold. Do not forget to carry your sweater.</string>
    <string name="thanks_button">Thanks</string>
    <string name="know_more">Know more ...</string>
    <string name="searching_text">Search...</string>
    <string name="search_text">Search</string>
    <string name="quickselect_text">Quick Select</string>
    <string name="fever_text">Fever</string>
    <string name="cough_text">Cough</string>
    <string name="diarrhoea_text">Diarrhoea</string>
    <string name="headache_text">Headache</string>
    <string name="sorethroat_text">Sore Throat</string>
    <string name="refresh_menu_label">Refresh</string>
    <string name="qr_top_reminder_text_inactive">Check-in to View Your \'Q\' Number</string>
    <string name="qr_bottom_reminder_text_inactive">Please Scan the QR Code at the Clinic Counter</string>
    <string name="qr_top_reminder_text_miss">You Have Missed your \'Q\'</string>
    <string name="qr_bottom_reminder_text_miss">Please Scan the QR Code at the Clinic Counter before &lt;b>%tR&lt;/b> to Reactivate</string>
    <string name="qr_top_reminder_text_absent">Your Current Booking is Absent</string>
    <string name="qr_top_reminder_text_completed">Your Have No Pending Booking :)</string>
    <string name="qr_bottom_reminder_text_no_pending">Press Me to Create a New Booking</string>
    <string name="queuenumber_text">Your \'Q\' Number</string>
    <string name="queue_length_before_text">Patients In Front of You</string>
    <string name="queue_length_before_unavailable_text">Unavailable</string>
    <string name="queue_length_before_approaching_text">You\'ll be Notified shortly</string>
    <string name="queue_length_before_notified_text">Q Number is Notified!</string>
    <string name="queue_reminder_text_active">Numbers may not be called in order</string>
    <string name="queue_reminder_text_reactivated">Numbers may not be called in order\nNote: Your Booking can be Reactivated only once</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="title_activity_choose_clinic">Map</string>
    <string name="title_activity_faq">FAQs</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pref_user" translatable="false">user</string>
    <string name="pref_booking" translatable="false">booking</string>
    <string name="pref_user_is_logged_in_key" translatable="false">isLoggedIn</string>
    <string name="pref_user_phone_number_key" translatable="false">phoneNumber</string>
    <string name="pref_booking_status_key" translatable="false">bookingStatus</string>
    <string name="pref_booking_status_inactive_value" translatable="false">INACTIVE</string>
    <string name="pref_booking_status_active_value" translatable="false">ACTIVE</string>
    <string name="pref_booking_status_missed_value" translatable="false">MISSED</string>
    <string name="pref_booking_status_reactivated_value" translatable="false">REACTIVATED</string>
    <string name="pref_booking_status_completed_value" translatable="false">COMPLETED</string>
    <string name="pref_booking_status_absent_value" translatable="false">ABSENT</string>
    <string name="pref_booking_tid_key" translatable="false">tid</string>
    <string name="pref_booking_length_before_key" translatable="false">lengthBefore</string>
</resources>