<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tomorrow.ntu.edu.sg.hospitalbees.BookingComplete">

    <ImageView
        android:id="@+id/tickImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tick" />

    <TextView
        android:id="@+id/bookingCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tickImage"
        android:layout_marginTop="30dp"
        android:text="@string/booking_completed"
        android:textSize="35sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/completionNotice"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookingCompleted"
        android:layout_marginTop="20dp"
        android:text="@string/completion_notice"
        android:textSize="20sp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/completionNotice"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/home"
        android:textSize="15dp"
        android:onClick="homeButton" />

    <Button
        android:id="@+id/goToMyQueue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completionNotice"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/go_to_my_queue"
        android:textSize="15dp"
        android:onClick="MyQueue"/>

</android.support.constraint.ConstraintLayout>
